# myopic

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  README.md  basic-openings.json  publish-multi-platform.sh  rustfmt.toml
arena/: Cargo.toml  arena-config.json  arena-test
arena/src/: cartesian.rs  main.rs  tuning.rs
board/: Cargo.toml
board/src/: lib.rs  mv.rs  parse.rs
board/src/imp/: fen.rs
board/src/imp/cache/: mod.rs
board/src/imp/moves/: mod.rs
board/src/implementation/: castling.rs  fen.rs  history.rs  mod.rs  positions.rs  test.rs
board/src/implementation/cache/: constraints.rs  control.rs  mod.rs  termination.rs
board/src/implementation/evolve/: mod.rs  test.rs
board/src/implementation/moves/: enpassant_source.rs  mod.rs
board/src/parse/: mod.rs  patterns.rs  pgn.rs  uci.rs
brain/: .env  Cargo.toml
brain/src/: eval.rs  eval_impl.rs  lib.rs  mate_benchmark.rs  pos.rs  quiescent.rs  see.rs  tables.rs  values.rs
brain/src/bench/: mate_in_three.rs  mateinthree.rs  middlegame.rs  mod.rs
brain/src/eval/: clearcut_tests.rs  eval_impl.rs  imp.rs  material.rs  mod.rs
brain/src/eval/additional_components/: mod.rs  opening.rs
brain/src/search/: interactive.rs  mod.rs  negamax.rs  negascout.rs  ordering.rs  ordering_hints.rs  suggested_moves.rs
cloud/benchmark/: Cargo.toml  invoke.sh  invoke_local.sh  payload.json
cloud/benchmark/src/: main.rs  positions.rs
cloud/chessgame/: Cargo.toml
cloud/chessgame/src/: main.rs
cloud/chessmove/: Cargo.toml
cloud/chessmove/src/: main.rs  openings.rs  timing.rs
engine/board/: Cargo.toml  README.md
engine/board/src/: history.rs  lib.rs  moves.rs  mv.rs  positions.rs
engine/board/src/cache/: constraints.rs  control.rs  mod.rs  rays.rs  termination.rs
engine/board/src/evolve/: mod.rs  test.rs
engine/board/src/imp/: fen.rs  history.rs  mod.rs  positions.rs  rights.rs  test.rs
engine/board/src/parse/: mod.rs  patterns.rs  pgn.rs  uci.rs
engine/board/src/private/: fen.rs  history.rs  mod.rs
engine/board/src/test/: clock.rs  mod.rs  termination.rs
engine/brain/: .env  Cargo.toml  README.md
engine/brain/resources/: puzzle-formatter.py
engine/brain/src/: lib.rs  quiescent.rs  see.rs  timing.rs
engine/brain/src/bench/: mateinthree.rs  middlegame.rs
engine/brain/src/eval/: antipattern.rs  castling.rs  clearcut.rs  development.rs  imp.rs  material.rs  mod.rs  opening.rs  pawns.rs  phase.rs  see.rs  tables.rs  values.rs
engine/brain/src/search/: interactive.rs  mod.rs  movehints.rs  movequality.rs  moves.rs  negascout.rs  ordering.rs  orderinghints.rs  pv.rs  quiescent.rs  terminator.rs  transpositions.rs
engine/brain/src/test/: best_move.rs  clearcut.rs  facets.rs  mod.rs  move_comparison.rs  search.rs
engine/core/: Cargo.toml  README.md
engine/core/src/: bitboard.rs  castlezone.rs  hash.rs  lib.rs  magic.rs  reflectable.rs  square.rs
engine/core/src/bitboard/: cords.rs  iterator.rs  (+1 more)
engine/debug/: Cargo.toml
engine/debug/src/: main.rs
engine/testing/: Cargo.toml
engine/testing/src/: main.rs
event-stream/: .env.example  Cargo.toml  Dockerfile  README.md  build.gradle.kts  deploy.yaml  docker-compose.yaml  events-examples.json  local.env  settings.gradle.kts
event-stream/src/: challenge.rs  challenge_table.rs  client.rs  config.rs  eventprocessor.rs  events.rs  forwarding.rs  game_start.rs  gamestart.rs  lichess.rs  main.rs  params.rs  payload.rs  service.rs  streamloop.rs  user_status.rs  userstatus.rs  validity.rs
game-lambda/: Cargo.toml  experiment-output
game-lambda/src/: compute.rs  dynamodb.rs  dynamodb_openings.rs  endgame.rs  events.rs  first_moves.rs  game.rs  helper.rs  lichess.rs  main.rs  messages.rs  position.rs  timing.rs
game-lambda/tools/: Dockerfile  build-release-binary-internal.sh  build-release-binary.sh
hyper-exp/: Cargo.toml
hyper-exp/src/: main.rs
hyperopic/: .env  Cargo.toml
hyperopic/resources/: middlegame500
hyperopic/src/: bitboard.rs  board.rs  constants.rs  format.rs  hash.rs  lib.rs  material.rs  moves.rs  node.rs  parse.rs  phase.rs  position.rs  see.rs  square.rs  tables.rs  timing.rs
hyperopic/src/bench/: mateinthree.rs  middlegame.rs  mod.rs
hyperopic/src/eval/: castling.rs  development.rs  knightrim.rs  material.rs  mod.rs  pawns.rs
hyperopic/src/search/: end.rs  mod.rs  moves.rs  negascout.rs  pv.rs  quiescent.rs  terminator.rs
hyperopic/src/test/: best_move.rs  control.rs  facets.rs  make.rs  mod.rs  move_comparison.rs  pinned.rs  termination.rs
lambda/benchmark/: Cargo.toml  invoke.sh  payload.json
lambda/benchmark/src/: main.rs  positions.rs
lambda/challenge/: Cargo.toml  invoke.sh  random.json  specific.json
lambda/challenge/src/: client.rs  config.rs  main.rs  ratings.rs
lambda/chessgame/: Cargo.toml
lambda/chessgame/src/: compute.rs  dynamodb.rs  endgame.rs  events.rs  game.rs  lichess.rs  main.rs  messages.rs  moves.rs  position.rs
lambda/chessmove/: .gitignore  Cargo.toml  Dockerfile
lambda/chessmove/src/: endings.rs  main.rs  openings.rs  timing.rs
lambda/chessmove2/: Cargo.toml
lambda/chessmove2/src/: lookup.rs  main.rs  openings.rs
lambda/payloads/: Cargo.toml
lambda/payloads/src/: benchmark.rs  chessgame.rs  chessmove.rs  chessmove2.rs  lib.rs
lib/events/: Cargo.toml
lib/events/src/: events.rs  lib.rs  lichess.rs  processor.rs  userstatus.rs
lib/game/: Cargo.toml
lib/game/src/: cancel.rs  compute.rs  events.rs  game.rs  lib.rs  lichess.rs  messages.rs
lib/lichess/: Cargo.toml
lib/lichess/src/: endings.rs  lib.rs  ratings.rs
lib/openings/: Cargo.toml
lib/openings/src/: lib.rs
lib/response-stream/: Cargo.toml
lib/response-stream/src/: lib.rs
move-lambda/: Cargo.toml
move-lambda/src/: main.rs
myopic-core/: Cargo.toml  README.md
myopic-core/src/: castlezone.rs  direction.rs  hash.rs  lib.rs  mod.rs  reflectable.rs  square.rs
myopic-core/src/bitboard/: constants.rs  cords.rs  iterator.rs  mod.rs
myopic-core/src/pieces/: kings.rs  knights.rs  mod.rs  pawns.rs
openings/dynamodb-uploader/: Cargo.toml
openings/dynamodb-uploader/src/: main.rs
(+437 files in other folders)
