[workspace]
members = [
    "engine/board",
    "engine/brain",
    "engine/core",
    "engine/debug",
    "cloud/event-stream",
    "cloud/benchmark",
    "cloud/chessgame",
    "cloud/chessmove",
    "cloud/challenge",
    "cloud/payloads",
    "openings/dynamodb-uploader",
    "openings/pgn-extractor",
    "lib/response-stream",
    "lib/game",
    "lib/events",
    "lib/lichess",
]
exclude = [
    "uci-client"
]