[package]
name = "myopic-board"
version = "1.3.4"
authors = ["Thomas Ball <tomoliverball@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/th0masb/myopic"
description = "Representation of a chess board"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
]

[dependencies]
myopic-core = "1.1.2"
lazy_static = "1.2.0"
itertools = "0.8"
regex = "1"
