[package]
name = "myopic-brain"
version = "1.8.0"
authors = ["Thomas Ball <tomoliverball@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/th0masb/myopic"
description = "Search and evaluation for determining best move available in a chess game"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
]

[dependencies]
myopic-board = { path = "../board" }
lazy_static = "1.4.0"
itertools = "0.9.0"
regex = "1"
serde_derive = "1.0.115"
serde = "1.0.115"
serde_json = "1.0.59"
anyhow = "1.0.35"

[dev-dependencies]
dotenv = "0.15.0"
