[package]
name = "event-stream"
version = "1.1.0"
authors = ["Thomas Ball <tomoliverball@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.115"
serde = "1.0.115"
serde_json = "1.0.59"
simple-error = "0.2.2"
simple_logger = "1.9.0"
dotenv = "0.15.0"
log = "0.4.11"
bytes = "1.0.1"
anyhow = "1.0.35"
futures-util = "0.3.14"
tokio = { version = "1", features = ["full"] }
warp = "0.3.1"
reqwest = { version = "0.11.3", default_features = false, features = ["rustls-tls", "json", "stream"] }
rusoto_core = { version = "0.46.0", default_features = false, features = ["rustls"] }
rusoto_lambda = { version = "0.46.0", default_features = false, features = ["rustls"] }
