[package]
name = "event-stream"
version = "0.0.0"
authors = ["Thomas Ball <tomoliverball@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
simple_logger = "4.1.0"
regex = "1.8.1"
serde_regex = "1.1.0"
dotenv = "0.15.0"
log = "0.4.17"
bytes = "1.4.0"
anyhow = "1.0.71"
async-trait = "^0.1.68"
futures-util = "0.3.28"
tokio = { version = "1.28.1", features = ["full"] }
warp = "0.3.5"
response-stream = { path = "../lib/response-stream" }
lambda-payloads = { path = "../lib/payloads" }
reqwest = { version = "0.11.18", default_features = false, features = ["rustls-tls", "json", "stream"] }
rusoto_core = { version = "0.48.0", default_features = false, features = ["rustls"] }
rusoto_lambda = { version = "0.48.0", default_features = false, features = ["rustls"] }
rusoto_dynamodb = { version = "0.48.0", default_features = false, features = ["rustls"] }
