[package]
name = "game-lambda"
version = "0.1.0"
authors = ["Thomas Ball <tomoliverball@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
myopic-brain = "1.2.1"
myopic-board = "1.1.2"
myopic-core = "1.0.1"
lambda_runtime = "0.2.1"
serde_derive = "1.0.115"
serde = "1.0.115"
serde_json = "1.0.59"
simple-error = "0.2.2"
simple_logger = "1.9.0"
log = "0.4.11"
bytes = "0.5.6"
rand = "0.5.0"
tokio = { version = "0.2.22", default_features = false, features = ["rt-core"] }
reqwest = { version = "0.10.8", default_features = false, features = ["rustls-tls", "blocking"] }
rusoto_core = { version = "0.45.0", default_features = false, features = ["rustls"] }
rusoto_lambda = { version = "0.45.0", default_features = false, features = ["rustls"] }