[package]
name = "hyper-exp"
version = "0.1.0"
authors = ["Thomas Ball <tomoliverball@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", default_features = false, features = ["rustls-tls", "blocking"] }
rusoto_core = { version = "0.45.0", default_features = false, features = ["rustls"] }
rusoto_lambda = { version = "0.45.0", default_features = false, features = ["rustls"] }