[package]
name = "hyperopic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
anyhow = "1.0.71"
regex = "1.8.1"
rustc-hash = "1.1.0"

[profile.release]
codegen-units = 1
lto = true
