[package]
name = "hyperopic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
anyhow = "1.0.71"
regex = "1.8.1"
rustc-hash = "1.1.0"
serde = "1.0.171"
serde_json = "1.0.102"
serde_derive = "1.0.171"

