[package]
name = "move-lambda"
version = "0.1.0"
authors = ["Thomas Ball <tomoliverball@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
myopic-brain = "1.5.3"
lambda_runtime = "0.2.1"
serde_derive = "1.0.115"
serde = "1.0.115"
simple-error = "0.2.2"
simple_logger = "1.9.0"
log = "0.4.11"
