[package]
name = "chessmove-benchmark-lambda"
version = "0.0.0"
authors = ["Thomas Ball <tomoliverball@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyperopic = { path = "../../hyperopic" }
lambda_payloads = { path = "../payloads" }
simple_logger = "4.1.0"
log = "0.4.17"
serde = "1.0.163"
serde_json = "1.0.96"
lambda_runtime = "0.8.0"
tokio = "1.28.1"
itertools = "0.10.5"
