[package]
name = "chessmove"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
myopic-brain = { path = "../../engine/brain" }
lambda_payloads = { path = "../payloads" }
lambda_runtime = "0.8.0"
tokio = "1.0"
serde_derive = "1.0.163"
serde = "1.0.163"
serde_json = "1.0.96"
simple_logger = "4.1.0"
itertools = "0.10.5"
log = "0.4.17"
bytes = "1.4.0"
rand = "0.8.5"
async-trait = "0.1.68"
reqwest = { version = "0.11.18", default_features = false, features = ["rustls-tls", "blocking", "json"] }
rusoto_core = { version = "0.48.0", default_features = false, features = ["rustls"] }
rusoto_lambda = { version = "0.48.0", default_features = false, features = ["rustls"] }
rusoto_dynamodb = { version = "0.48.0", default_features = false, features = ["rustls"] }
