[package]
name = "myopic-board"
version = "2.2.0"
authors = ["Thomas Ball <tomoliverball@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/th0masb/myopic"
description = "Representation of a chess board"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
]

[dependencies]
myopic-core = { path = "../core" }
lazy_static = "1.4.0"
itertools = "0.10.5"
regex = "1.8.1"
enum-map = "2.5.0"
