[package]
name = "myopic-brain"
version = "1.8.0"
authors = ["Thomas Ball <tomoliverball@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/th0masb/myopic"
description = "Search and evaluation for determining best move available in a chess game"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
]

[dependencies]
myopic-board = { path = "../board" }
lazy_static = "1.4.0"
itertools = "0.10.5"
regex = "1.8.1"
serde_derive = "1.0.163"
serde = "1.0.163"
serde_json = "1.0.96"
enum-map = "2.5.0"

[dev-dependencies]
dotenv = "0.15.0"
