[package]
name = "myopic-core"
version = "1.3.0"
authors = ["Thomas Ball <tomoliverball@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/th0masb/myopic"
description = "Core chess utilities"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
]

[dependencies]
itertools = "0.8"
rand = "0.6.5"
rand_pcg = "0.1.2"
lazy_static = "1.2.0"
anyhow = "1.0.35"
enumset = "1.0.6"
enum-map = "2.0.2"
