[package]
name = "debug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
myopic-brain = { path = "../brain" }
clap = { version = "^4.3.0", features = ["derive"] }
serde = "1.0.163"
serde_json = "1.0.96"
