[package]
name = "chessmove-benchmark-lambda"
version = "0.0.0"
authors = ["Thomas Ball <tomoliverball@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
myopic-brain = { path = "../../lib/engine/brain" }
lambda-payloads = { path = "../payloads" }
simple_logger = "1.16.0"
log = "0.4.14"
serde = "1.0.115"
serde_json = "1.0.59"
lambda_runtime = "0.4.1"
tokio = "1.0"
itertools = "0.9.0"
