[package]
name = "challenge"
version = "0.0.0"
authors = ["Thomas Ball <tomoliverball@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda-payloads = { path = "../../lib/payloads" }
lambda_runtime = "0.8.0"
serde = "1.0.163"
serde_json = "1.0.96"
simple_logger = "4.1.0"
log = "0.4.17"
bytes = "1.4.0"
tokio = "^1.28.1"
tokio-util = "^0.7.8"
reqwest = { version = "0.11.18", default_features = false, features = ["rustls-tls", "blocking", "json"] }
response-stream = { path = "../../lib/response-stream" }
rusoto_core = { version = "0.48.0", default_features = false, features = ["rustls"] }
rusoto_lambda = { version = "0.48.0", default_features = false, features = ["rustls"] }
rusoto_dynamodb = { version = "0.48.0", default_features = false, features = ["rustls"] }
