[package]
name = "challenge"
version = "0.0.0"
authors = ["Thomas Ball <tomoliverball@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.8.0"
serde = "1.0.163"
serde_json = "1.0.96"
serde_derive = "1.0.163"
simple_logger = "4.1.0"
log = "0.4.17"
tokio = "^1.28.1"
rand = "0.8.5"
itertools = "^0.10.5"
reqwest = { version = "0.11.18", default_features = false, features = ["rustls-tls", "json"] }
