[package]
name = "chessmove-lambda"
version = "0.0.0"
authors = ["Thomas Ball <tomoliverball@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
myopic-brain = { path = "../../engine/brain" }
lambda_runtime = "0.2.1"
serde_derive = "1.0.115"
serde = "1.0.115"
serde_json = "1.0.59"
simple-error = "0.2.2"
simple_logger = "1.9.0"
log = "0.4.11"
anyhow = "1.0.35"
