[package]
name = "chessmove2"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
myopic-brain = { path = "../../engine/brain" }
lambda-payloads = { path = "../payloads" }
lambda_runtime = "0.4.1"
tokio = "1.0"
serde_derive = "1.0.115"
serde = "1.0.115"
serde_json = "1.0.59"
simple_logger = "1.16.0"
log = "0.4.14"
