[package]
name = "lichess_events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", default_features = false, features = ["rustls-tls", "json", "stream"] }
tokio = { version = "1.28.1", features = ["full"] }
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
anyhow = "1.0.71"
async-trait = "^0.1.68"
response_stream = { path = "../response-stream" }
log = "0.4.17"
