[package]
name = "chessgame"
version = "0.0.0"
authors = ["Thomas Ball <tomoliverball@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
myopic-brain = { path = "../engine/brain" }
serde_derive = "1.0.115"
serde = "1.0.115"
serde_json = "1.0.59"
simple_logger = "1.16.0"
log = "0.4.14"
bytes = "1.0"
rand = "0.5.0"
itertools = "0.8"
async-trait = "0.1.52"
tokio = "1.0"
