[package]
name = "lichess_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", default_features = false, features = ["rustls-tls", "blocking", "json"] }
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.99"
anyhow = "1.0.71"
hyperopic = { path = "../../engine/hyperopic" }
log = "0.4.17"
