[package]
name = "openings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyperopic = { path = "../../engine/hyperopic" }
futures = { version = "0.3.28", features = ["executor"] }
serde_derive = "1.0.163"
serde = "1.0.163"
serde_json = "1.0.96"
log = "0.4.17"
itertools = "0.10.5"
anyhow = "1.0.71"
rand = "0.8.5"
rusoto_core = { version = "0.48.0", default_features = false, features = ["rustls"] }
rusoto_dynamodb = { version = "0.48.0", default_features = false, features = ["rustls"] }
