[package]
name = "response-stream"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "^0.3.28"
anyhow = "^1.0.71"
async-trait = "^0.1.68"
reqwest = { version = "^0.11.18", default_features = false, features = ["rustls-tls", "json", "stream"] }
